--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ venv
 lesson_1/Урок 1. Коды примеров
 lesson_3/examples
 lesson_6/Урок 6. Коды примеров
+lesson_7/Урок 7. Пример выполнения ДЗ
+lesson_7/Урок 7. Коды примеров
